# src/ProyectoAtlas.Application/Features/DocumentationRelations/ListIncoming/ListIncomingDocumentationRelationsQueryHandler.cs
@@ -1,4 +1,5 @@
 using ProyectoAtlas.Application.Features.DocumentationRelations.Common;
+using ProyectoAtlas.Application.Features.DocumentationRelations.List;
 using ProyectoAtlas.Domain.Documentations;
 using ProyectoAtlas.Domain.Projects;
 
