# src/ProyectoAtlas.Application/Features/ProjectRelations/ListIncoming/ListIncomingProjectRelationsQueryHandler.cs
@@ -1,4 +1,5 @@
 using ProyectoAtlas.Domain.Projects;
+using ProyectoAtlas.Application.Features.ProjectRelations.List;
 
 namespace ProyectoAtlas.Application.Features.ProjectRelations.ListIncoming;
 
